# narrative-treemap

./: .gitignore  Makefile  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: routes.py
backend/app/core/: config.py  database.py  hash_utils.py  logging.py  time_windows.py
backend/app/pipeline/: decision_briefing.py  embeddings.py  market_data.py  metrics.py  service.py  source_quality.py  topic_model.py
backend/app/schemas/: api.py  models.py
backend/app/sources/: aljazeera.py  ars_technica.py  arxiv_cs.py  arxiv_physics.py  base.py  bbc_sport.py  bbc_world.py  billboard.py  bleepingcomputer.py  bloomberg_markets.py  cbssports.py  cdc_newsroom.py  cnbc.py  coindesk.py  cointelegraph.py  darkreading.py  deadline.py  drugs_medical_news.py  dw_world.py  ecb_press.py  economist_world.py  engadget.py  espn.py  factory.py  federal_reserve.py  france24_world.py  ft_world.py  gamedeveloper.py  gamespot.py  github_trending.py  go_blog.py  google_news_domains.py  google_news_regional.py  hackernews.py  hollywood_reporter.py  ign.py  investing_com.py  kotlin_blog.py  krebs_security.py  lobsters.py  (+37 more)
backend/app/tests/: test_decision_briefing.py  test_metrics.py  test_rss_parsing.py  test_service_backtest_portfolio.py  test_source_quality.py  test_topic_label_quality.py  test_topic_shape.py
backend/data/: seed_topics_1h.json  seed_topics_6h.json  seed_topics_7d.json
docs/: DECISION_BRIEFING_PLAN.md  LAUNCH_POST.md
frontend/: Dockerfile  next.config.mjs  package-lock.json  (+2 more)
(+26 files in other folders)
